--- a/home/tamagochi/css/style.scss
+++ b/home/tamagochi/css/style.scss
@@ -1,3 +1,6 @@
+@import "variables";
+@import "mixins";
+
 *{
     margin: 0;
     padding: 0;
@@ -11,7 +14,15 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom center;
+
+    @include setBg('start','jpg');
+    @include setBg('bg1','jpg');
+    @include setBg('bg2','png');
+    @include setBg('bg3','jpg');
 }
+
+
+
 
 #app{
     text-align: center;
@@ -39,10 +50,16 @@ body{
     justify-content: center;
 }
 
-.game-backgrounds li img{
+.game-backgrounds li{
     width: 200px;
+    height: 112px;
     margin: 10px;
     transition: 0.5s;
+    background-size: contain;
+
+    @include setBg('bg1','jpg');
+    @include setBg('bg2','png');
+    @include setBg('bg3','jpg');
 }
 
 .game-backgrounds li img:hover{
